[package]
name = "transaction_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.19", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"]}
csv = "1.1.6"

[dev-dependencies]
tempfile = "3.3.0"
